kube/hn.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hn-app"
  labels:
    app.kubernetes.io/name: hn
    app.kubernetes.io/instance: hn-abcxzy
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: hn-app
    app.kubernetes.io/managed-by: Shimon

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hn
  namespace: "hn-app"
  labels:
    app.kubernetes.io/name: hn
    app.kubernetes.io/instance: hn-abcxzy
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: hn-app
    app.kubernetes.io/managed-by: Shimon
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hn
  template:
    metadata:
      labels:
        app: hn
    spec:
      containers:
        - name: hn
          image: preslavmihaylov/kubehelloworld:latest
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: 8000
          # readinessProbe:
          #   httpGet:
          #     path: /health
          #     port: 8000
          ports:
            - containerPort: 3000
          resources:
             limits:
               cpu: "250m"
               memory: "128Mi"
#             requests:
#               memory: "128Mi"
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: "service-hn"
  namespace: "hn-app"
  labels:
    app.kubernetes.io/name: hn
    app.kubernetes.io/instance: hn-abcxzy
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: hn-app
    app.kubernetes.io/managed-by: Shimon
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: NodePort
  selector:
    app: "hn"
