kube/hn-ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "hn-ingress"
  namespace: "hn-app"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: hn-ingress
spec:
  rules:
    - host: hn.datree.io
    - http:
        paths:
        - backend:
            service:
              name: service-hn
              port:
                number: 80
          path: /
          pathType: Prefix
